2004-03-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* amplot/amplot.awk: Parse "driver: tape size" line.

2004-03-22  Stefan G. Weichinger <monitor@oops.co.at>

	* server-src/amcheck.c (start_host): Added warning for hostname
	  localhost.
	* docs/TOP-TEN-QUESTIONS: added note about localhost-warning.

2004-03-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/Makefile.am (pkgdata_DATA): Add TOP-TEN-QUESTIONS.

2004-03-18  Stefan G. Weichinger <monitor@oops.co.at>

	* docs/TOP-TEN-QUESTIONS: New file.

2004-03-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c (handle_success): Set stats[i].coutsize
	  correctly.
	* server-src/taper.c: Do not subtract tt_blocksize_kb from filesize.

2004-03-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/ssh-security.c: New ssh security driver.
	* common-src/Makefile.am (libamanda_la_SOURCES): Add ssh-security.c.
	* common-src/security.c: Add ssh security driver.
	* configure.in: Add --with-ssh-security. Define SSH_SECURITY.

2004-03-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amcheck.c: Do labelstr check in correct order.

2004-03-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Use only one time event for all dumpers, no wait event.
	start_some_dumps is called everytime a dumper or taper finish.
	* server-src/driver.c (dumpers_ev_time): New global event.
	* server-src/driver.c (start_some_dumps): Remove dumper argument,
	  can start many dump.
	* server-src/driver.c (dumper_result): Call start_some_dumps instead
	  of event_wakeup.
	* server-src/driver.c (handle_idle_wait): Remove function.
	* server-src/driver.c (handle_dumpers_time): new handle for
	  dumpers_ev_time, it call start_some_dumps.
	* server-src/driverio.h (dumper_t): Remove ev_wait.
	* server-src/driverio.c (startup_dump_process): Don't set ev_wait.

2004-03-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
