@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amindexd.c,v 1.74 2003/10/27 18:32:50 martinea Exp $
+ * $Id: amindexd.c,v 1.75 2004/04/05 17:22:24 martinea Exp $
  *
  * This is the server daemon part of the index client/server system.
  * It is assumed that this is launched from inetd instead of being
@@ -344,7 +344,7 @@ char *host;
 {
     struct stat dir_stat;
     char *fn;
-    host_t *ihost;
+    am_host_t *ihost;
 
     if (config_name == NULL) {
 	reply(501, "Must set config before setting host.");
