@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: diskfile.c,v 1.57 2003/10/27 18:32:50 martinea Exp $
+ * $Id: diskfile.c,v 1.58 2004/04/05 17:22:24 martinea Exp $
  *
  * read disklist file
  */
@@ -34,7 +34,7 @@
 #include "conffile.h"
 #include "diskfile.h"
 
-static host_t *hostlist;
+static am_host_t *hostlist;
 
 /* local functions */
 static char *upcase P((char *st));
@@ -77,11 +77,11 @@ read_diskfile(filename, lst)
     return (0);
 }
 
-host_t *
+am_host_t *
 lookup_host(hostname)
     const char *hostname;
 {
-    host_t *p;
+    am_host_t *p;
 
     for (p = hostlist; p != NULL; p = p->next) {
 	if(strcasecmp(p->hostname, hostname) == 0) return p;
@@ -93,7 +93,7 @@ disk_t *
 lookup_disk(hostname, diskname)
     const char *hostname, *diskname;
 {
-    host_t *host;
+    am_host_t *host;
     disk_t *disk;
 
     host = lookup_host(hostname);
@@ -161,7 +161,7 @@ char *hostname;
 char *diskname;
 {
     disk_t *disk;
-    host_t *host;
+    am_host_t *host;
 
     disk = alloc(sizeof(disk_t));
     disk->line = 0;
@@ -175,7 +175,7 @@ char *diskname;
 
     host = lookup_host(hostname);
     if(host == NULL) {
-	host = alloc(sizeof(host_t));
+	host = alloc(sizeof(am_host_t));
 	host->next = hostlist;
 	hostlist = host;
 
@@ -277,7 +277,7 @@ parse_diskline(lst, filename, diskf, line_num_p, line_p)
     int *line_num_p;
     char **line_p;
 {
-    host_t *host;
+    am_host_t *host;
     disk_t *disk;
     dumptype_t *dtype;
     interface_t *netif = 0;
@@ -488,7 +488,7 @@ parse_diskline(lst, filename, diskf, line_num_p, line_p)
     /* success, add disk to lists */
 
     if(host == NULL) {			/* new host */
-	host = alloc(sizeof(host_t));
+	host = alloc(sizeof(am_host_t));
 	malloc_mark(host);
 	host->next = hostlist;
 	hostlist = host;
@@ -922,7 +922,7 @@ dump_disklist(lst)
     const disklist_t *lst;
 {
     const disk_t *dp, *prev;
-    const host_t *hp;
+    const am_host_t *hp;
 
     if(hostlist == NULL) {
 	printf("DISKLIST not read in\n");
