@@ -1,3 +1,13 @@
+2004-04-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/amadmin.c: Rename host_t to amhost_t.
+	* server-src/amcheck.c: Ditto.
+	* server-src/amindexd.c: Ditto.
+	* server-src/diskfile.c: Ditto.
+	* server-src/diskfile.h: Ditto.
+	* server-src/driver.c: Ditto.
+	* server-src/planner.c: Ditto.
+
 2004-03-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* amplot/amplot.awk: Parse "driver: tape size" line.
